# crewai-test

./: README.md  pyproject.toml
src/browser_extension_developer/: crew.py  main.py
src/browser_extension_developer/config/: agents.yaml  tasks.yaml
