[project]
name = "browser_extension_developer"
version = "0.1.0"
description = "sales-contact-finder using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "langchain-core>=0.2.30",
]

[project.scripts]
browser_extension_developer = "browser_extension_developer.main:run"
run_crew = "browser_extension_developer.main:run"
train = "browser_extension_developer.main:train"
replay = "browser_extension_developer.main:replay"
test = "browser_extension_developer.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
